[package]
name = "v25_datacleaner"
description = "clean V25 logfiles from incomplete lines etc."
version = "0.1.3"
authors = ["Florian Obersteiner, f.obersteiner@kit.edu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cleaner_lib"
path = "src/lib.rs"

[[bin]]
name = "v25_datacleaner"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.0"
yaml-rust = "0.4.5"
